# blackbox

./: Cargo.toml  readme.md
.cargo/: config
assets/: convert.py  generate.py
assets/faces/: ANGRY  AWAKE  BORED  COOL  DEBUG  DEMOTIVATED  EXCITED  FRIEND  GRATEFUL  LONELY  LOOK_L  LOOK_R_HAPPY  MOTIVATED  SAD  SLEEP2  SMART  UPLOAD1  UPLOAD2  mod.rs
blackbox/: Cargo.toml
blackbox/src/: main.rs  timestamp.rs
blackbox/src/faces/: ANGRY  COOL  HAPPY  LONELY  LOOK_R  SLEEP2  SMART  mod.rs
blackbox/src/tones/: mario.rs  mod.rs  startup.rs  tetris.rs
cad/: Telemetry-cache.lib  Telemetry.kicad_prl  Telemetry.kicad_pro  Telemetry.lib  Telemetry.sch  Telemetry.sch-bak  sym-lib-table
gd32vf103xx-hal/: Cargo.toml  build.rs
gd32vf103xx-hal/src/: adc.rs  afio.rs  backup_domain.rs  can.rs  delay.rs  exmc.rs  exti.rs  gpio.rs  i2c.rs  pwm.rs  rcu.rs  serial.rs  spi.rs
longan-nano/: Cargo.toml
longan-nano/src/: led.rs  lib.rs  sdcard.rs  stdout.rs
telemetry/: Cargo.toml
telemetry/src/: buffer.rs  main.rs  timestamp.rs
telemetry/src/faces/: AWAKE  BORED  BROKEN  DEBUG  EXCITED  FRIEND  HAPPY  INTENSE  LOOK_L  LOOK_L_HAPPY  LOOK_R  SAD  SLEEP  UPLOAD
telemetry/src/tones/: mod.rs
