[package]
name = "blackbox"
version = "0.1.0"
edition = "2021"

[dependencies]
longan-nano = { path = "../longan-nano", features = ["sdcard"] }
gd32vf103xx-hal = { path = "../gd32vf103xx-hal" }
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
embedded-hal = "0.2.6"
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
bbqueue = "0.5.0"
nb = "0.1.2"
critical-section = "1.1.1"
embedded-can = "0.4.1"
embedded-sdmmc = "0.3.0"
