[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
longan-nano = { path = "../longan-nano", features = ["sdcard", "lcd"] }
gd32vf103xx-hal = { path = "../gd32vf103xx-hal" }
riscv-rt = "0.8.0"
riscv = "0.6.0"
# panic-halt = "0.2.0"
embedded-hal = "0.2.6"
embedded-sdmmc = "0.3.0"
embedded-can = "0.3.0"
bbqueue = "0.5.0"
nb = "0.1.2"
